--- a/src/pages/Signin/signin.css
+++ b/src/pages/Signin/signin.css
@@ -1,4 +1,3 @@
-
 .container-center{
   height: 100%;
   display: flex;
@@ -9,12 +8,17 @@
 
 .login{
   background: #EAEAEC;
+  height:400px;
   width: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   border-radius: 12px;
+}
+
+.login a{
+  color:rgb(248, 0, 0);
 }
 
 .login-area{
