Creating registration page

--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -17,7 +17,7 @@
 
 .buttonForm:hover{
     background-color: #eb0a60;
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255);
 }
 
 .buttonForm spam{
